# anathema-widgets-extended

./: Cargo.toml  README.md
src/: graph.rs  graph_points.rs  main.rs  starfield.rs
src/graph/: graph.rs  graph_points.rs  graph_wrapper.rs  mod.rs
src/resources/: cpus.rs  mod.rs  threads.rs
src/starfield/: mod.rs  starfield.rs
templates/: graph.aml  graph_wrapper.aml  index.aml  starfield.aml
templates/resources/: cpus.aml  threads.aml
