[package]
name = "anathema-widgets-extended"
version = "0.1.0"
edition = "2024"

[dependencies]
#anathema = { git = "https://github.com/togglebyte/anathema/", branch = "dev" }
anathema = { path = "../anathema" }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"